--- a/v2.md
+++ b/v2.md
@@ -14,6 +14,19 @@
 
 ### Syntax
 
+- add `<!-- executable-code -->` to execute JavaScript code
+
+```markdown
+<!-- executable-code -->
+
+\`\`\`javascript
+console.log('hi');
+alert('hi!');
+\`\`\`
+```
+
+See https://hiroppy.github.io/fusuma/intro/#slide=19.
+
 - add `<!-- block-start -->` and `<!-- block-end -->` to wrap children using `div` tag
 
 ```markdown
@@ -59,6 +72,8 @@ right
 
 <!-- block-end -->
 ```
+
+See https://hiroppy.github.io/fusuma/intro/#slide=15.
 
 ### Others
 
